fix: collapse spacing between arrow and text

--- a/packages/core/src/components/breadcrumb/_breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/_breadcrumb.scss
@@ -9,13 +9,13 @@
     font-size: 0.75rem;
     line-height: 1;
     white-space: nowrap;
-    text-overflow: ellipsis;
     overflow-x: auto;
     display: flex;
   }
 
   .#{$ray-class-prefix}breadcrumb {
     color: $ray-color-text-medium;
+    display: flex;
 
     &:not(:last-child) {
       margin-right: 0.5rem;
